--- a/app/views/admin/events/show.html.erb
+++ b/app/views/admin/events/show.html.erb
@@ -123,9 +123,9 @@
                           <div class="text-sm text-gray-500"><%= log.user.email %></div>
                         </td>
                         <td class="px-6 py-4 whitespace-nowrap">
-                          <% if log.user.team %>
-                            <span class="px-2 inline-flex text-xs leading-5 font-semibold rounded-full bg-<%= log.user.team.color %>-100 text-<%= log.user.team.color %>-800">
-                              <%= log.user.team.name %>
+                          <% if log.user.mentee&.team %>
+                            <span class="px-2 inline-flex text-xs leading-5 font-semibold rounded-full bg-<%= log.user.mentee.team.color %>-100 text-<%= log.user.mentee.team.color %>-800">
+                              <%= log.user.mentee.team.name %>
                             </span>
                           <% else %>
                             <span class="text-sm text-gray-500">—</span>
@@ -195,9 +195,9 @@
                           <div class="text-sm text-gray-500"><%= log.user.email %></div>
                         </td>
                         <td class="px-6 py-4 whitespace-nowrap">
-                          <% if log.user.team %>
-                            <span class="px-2 inline-flex text-xs leading-5 font-semibold rounded-full bg-<%= log.user.team.color %>-100 text-<%= log.user.team.color %>-800">
-                              <%= log.user.team.name %>
+                          <% if log.user.mentee&.team %>
+                            <span class="px-2 inline-flex text-xs leading-5 font-semibold rounded-full bg-<%= log.user.mentee.team.color %>-100 text-<%= log.user.mentee.team.color %>-800">
+                              <%= log.user.mentee.team.name %>
                             </span>
                           <% else %>
                             <span class="text-sm text-gray-500">—</span>
