--- a/app/views/admin/family_members/index.html.erb
+++ b/app/views/admin/family_members/index.html.erb
@@ -37,10 +37,10 @@
                   <% @family_members.each do |family_member| %>
                     <tr>
                       <td class="px-6 py-4 whitespace-nowrap">
-                        <div class="text-sm font-medium text-gray-900"><%= family_member.user.email %></div>
+                        <div class="text-sm font-medium text-gray-900"><%= family_member.guardian.user.email %></div>
                       </td>
                       <td class="px-6 py-4 whitespace-nowrap">
-                        <div class="text-sm text-gray-900"><%= family_member.related_user.email %></div>
+                        <div class="text-sm text-gray-900"><%= family_member.mentee.user.email %></div>
                       </td>
                       <td class="px-6 py-4 whitespace-nowrap">
                         <span class="px-2 inline-flex text-xs leading-5 font-semibold rounded-full bg-blue-100 text-blue-800">
